--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "apollo3-cache-persist": "^0.14.0",
     "graphql": "^16.5.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-redux": "^8.0.1",
+    "redux-injectors": "^1.3.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -29,6 +33,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
+    "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
     "@typescript-eslint/parser": "^5.24.0",
